# wg-waybar

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  error.rs  main.rs  utils.rs
