[package]
name = "wg-waybar"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.38", features = ["derive"] }
defguard_wireguard_rs = "0.7.2"
libc = "0.2.172"
procfs = "0.17.0"
rust-ini = "0.21.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uzers = "0.12.1"
x25519-dalek = "2.0.1"
